v/0.14.0/_sources/examples/02_medium_range/06_atlas_inference.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/02_medium_range/06_atlas_inference.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_02_medium_range_06_atlas_inference.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_02_medium_range_06_atlas_inference.py:


Running Atlas Inference
=======================

Deterministic inference using the Atlas prognostic model.

This example demonstrates how to run a single-member forecast using the Atlas model,
a generative AI weather model that uses stochastic interpolants and autoencoders to
produce 6-hour forecasts on a 0.25 degree global grid. Atlas requires two input lead
times (t-6h and t) and maintains an internal latent state for autoregressive rollouts.

In this example you will learn:

- How to instantiate the Atlas prognostic model
- How to run a single-member forecast with Atlas
- How to visualize predicted 10m u-wind and total column water vapour

.. GENERATED FROM PYTHON SOURCE LINES 35-44

.. code-block:: Python

    # /// script
    # dependencies = [
    #   "torch==2.11.0", # Match lock file to avoid torch-harmonics issue
    #   "earth2studio[atlas] @ git+https://github.com/NVIDIA/earth2studio.git",
    #   "cartopy",
    #   "matplotlib",
    # ]
    # ///








.. GENERATED FROM PYTHON SOURCE LINES 45-61

We need the following:

- Prognostic Model: Use the Atlas model :py:class:`earth2studio.models.px.Atlas`.
- Datasource: Pull data from the ARCO data source :py:class:`earth2studio.data.ARCO`.
- IO Backend: Save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. note::
  Atlas requires two input lead times (t-6h and t) to produce a forecast.
  The deterministic workflow handles this automatically via the model's
  ``input_coords`` definition.

.. warning::
  Atlas was trained on ERA5 data and in-filled NaNs in SST over landmasses with a value
  of 0 K using the ERA5 land-sea mask. If you are using a different SST dataset, you will
  need to in-fill the NaNs using the appropriate land-sea mask.


.. GENERATED FROM PYTHON SOURCE LINES 63-88

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    import numpy as np
    import torch

    from earth2studio.data import ARCO
    from earth2studio.data.utils import fetch_data
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import Atlas

    # Load the default model package which downloads the checkpoint from HuggingFace
    package = Atlas.load_default_package()
    model = Atlas.load_model(package)

    # Create the data source
    data = ARCO()

    # Create the IO handler
    io = ZarrBackend()








.. GENERATED FROM PYTHON SOURCE LINES 89-100

Manual Forward Pass
-------------------
For more control over the inference loop, Atlas can be called directly using
:py:meth:`earth2studio.data.utils.fetch_data` for initial conditions and
:py:meth:`earth2studio.models.px.Atlas.prep_next_input` to advance the sliding
window between steps. This is useful when you need access to intermediate tensors
or want to customize the rollout logic.

.. note::
  For autoregressive rollouts longer than one step, prefer
  ``create_iterator`` which correctly manages the internal latent state.

.. GENERATED FROM PYTHON SOURCE LINES 102-132

.. code-block:: Python

    device = torch.device("cuda" if torch.cuda.is_available() else "cpu")
    model = model.to(device)

    # Get model input coordinate requirements
    input_coords = model.input_coords()

    # Fetch initial conditions matching the model's expected variables and lead times
    time = np.array([np.datetime64("2024-01-01T00:00")])
    x, coords = fetch_data(
        source=data,
        time=time,
        variable=input_coords["variable"],
        lead_time=input_coords["lead_time"],
        device=device,
    )

    # Add a batch dimension
    x = x.unsqueeze(0)
    coords["batch"] = np.arange(1)
    coords.move_to_end("batch", last=False)

    # Run two forward steps manually
    n_manual_steps = 2
    for step in range(n_manual_steps):
        y, y_coords = model(x, coords)
        lead_hrs = y_coords["lead_time"][0] / np.timedelta64(1, "h")
        print(f"Step {step + 1}: lead_time = {lead_hrs:.0f}h, shape = {y.shape}")
        x, coords = model.prep_next_input(y, y_coords, x, coords)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2026-04-28 22:34:48.404 | DEBUG    | earth2studio.data.arco:_async_init:131 - Using Multi-Storage Client for ARCO data access
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.127 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.127 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.127 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.128 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.128 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.128 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.129 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.131 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.131 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.132 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.133 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.133 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.134 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.134 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.135 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.135 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.136 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.136 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.137 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.137 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.138 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u10m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.138 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.139 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.140 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.140 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.141 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.141 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.142 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.143 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.143 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v10m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.144 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.144 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.145 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.145 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.146 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.147 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.147 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.148 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u100m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.148 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: tcwv at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.149 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.150 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.150 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.151 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.151 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v100m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.152 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.153 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.153 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.154 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.154 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.155 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.155 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.156 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t2m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.157 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.157 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.158 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.158 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.159 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.159 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: sp at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.160 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.160 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.160 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: tp at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.161 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.161 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.161 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.162 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.162 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: msl at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.163 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.163 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.163 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: sst at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.164 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.164 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.164 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.169 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.170 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:49.170 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]    Fetching ARCO data:   1%|▏         | 1/75 [00:03<04:22,  3.55s/it]    Fetching ARCO data:   4%|▍         | 3/75 [00:04<01:33,  1.30s/it]    Fetching ARCO data:   5%|▌         | 4/75 [00:04<01:03,  1.11it/s]    Fetching ARCO data:  52%|█████▏    | 39/75 [00:05<00:02, 14.38it/s]    Fetching ARCO data: 100%|██████████| 75/75 [00:05<00:00, 13.49it/s]
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.689 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.690 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.690 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.690 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: tcwv at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.690 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: tp at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.691 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.691 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.691 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.691 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.692 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t2m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.692 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.692 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.692 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.693 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.693 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.693 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: sst at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.693 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.694 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.694 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.694 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: sp at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.694 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.695 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v10m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.695 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.695 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.696 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u10m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.696 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.696 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.696 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.697 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.697 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.697 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.697 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.697 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.698 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.698 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.698 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.698 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.699 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.699 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.699 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.699 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v100m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.700 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.700 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.700 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.700 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.701 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.701 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.701 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.701 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.701 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.702 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.702 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.702 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.702 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u100m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.703 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.703 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.703 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.703 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.704 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.704 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.704 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.704 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.705 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.705 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.705 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.705 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.706 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.706 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.706 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.706 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.707 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.707 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.707 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.707 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:34:54.707 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: msl at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]    Fetching ARCO data:   1%|▏         | 1/75 [00:03<04:29,  3.64s/it]    Fetching ARCO data:  11%|█         | 8/75 [00:04<00:31,  2.11it/s]    Fetching ARCO data:  29%|██▉       | 22/75 [00:05<00:09,  5.81it/s]    Fetching ARCO data:  49%|████▉     | 37/75 [00:05<00:03, 11.52it/s]    Fetching ARCO data: 100%|██████████| 75/75 [00:05<00:00, 13.23it/s]
    2026-04-28 22:35:01.087 | INFO     | earth2studio.models.px.atlas:__call__:417 - Atlas input contains NaNs, replacing with 0.0
    Step 1: lead_time = 6h, shape = torch.Size([1, 1, 1, 75, 721, 1440])
    2026-04-28 22:38:59.374 | INFO     | earth2studio.models.px.atlas:__call__:417 - Atlas input contains NaNs, replacing with 0.0
    Step 2: lead_time = 12h, shape = torch.Size([1, 1, 1, 75, 721, 1440])




.. GENERATED FROM PYTHON SOURCE LINES 133-139

Using the model iterator interface
----------------------------------
For a less verbose approach, we can use the model iterator interface directly,
which automatically handles the internal latent state during autoregressive rollout.
Simply pass the model and other instantiated components to the workflow, which will
automatically use the iterator interface internally and return outputs to the IO handler.

.. GENERATED FROM PYTHON SOURCE LINES 141-155

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 3
    io = run.deterministic(
        ["2024-01-01"],
        nsteps,
        model,
        data,
        io,
        output_coords={"variable": np.array(["u10m", "tcwv"])},
    )

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2026-04-28 22:42:55.521 | INFO     | earth2studio.run:deterministic:78 - Running simple workflow!
    2026-04-28 22:42:55.521 | INFO     | earth2studio.run:deterministic:85 - Inference device: cuda
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.526 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.526 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v100m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.526 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.527 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.527 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.527 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.527 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.528 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.528 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.528 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.528 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.528 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.529 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.529 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.530 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.530 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.530 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.530 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.531 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.531 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.531 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.531 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.532 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.532 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.532 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.532 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.532 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.533 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.533 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.533 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.533 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.534 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.534 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.534 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.534 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.535 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.535 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.535 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.535 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.535 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: sst at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.536 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.536 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.536 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.536 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.537 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.537 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.537 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t250 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.537 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.538 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v100 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.538 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.538 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t400 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.538 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.539 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u500 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.539 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.539 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u100m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.539 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: sp at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.540 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t2m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.540 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.540 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t700 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.540 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.540 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q50 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.541 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.541 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v10m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.541 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: tcwv at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.541 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v600 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.542 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.542 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v925 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.542 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t850 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.542 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q300 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.543 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: tp at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.543 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t200 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.543 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: msl at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.543 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u10m at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.544 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z150 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:42:55.544 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u1000 at 2023-12-31T18:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]    Fetching ARCO data:   1%|▏         | 1/75 [00:03<04:07,  3.35s/it]    Fetching ARCO data:   3%|▎         | 2/75 [00:04<02:11,  1.80s/it]    Fetching ARCO data:   4%|▍         | 3/75 [00:04<01:22,  1.14s/it]    Fetching ARCO data:  40%|████      | 30/75 [00:05<00:04, 11.24it/s]    Fetching ARCO data: 100%|██████████| 75/75 [00:05<00:00, 14.39it/s]
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.741 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.741 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v100m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.741 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.742 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.742 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.742 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.742 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.743 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.743 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.743 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.743 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.744 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.744 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: tp at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.744 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.744 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.744 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.745 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.745 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.745 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.745 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.746 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.746 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.746 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.746 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.747 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.747 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.747 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.748 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.748 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.748 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.748 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.748 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.749 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.749 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.749 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.749 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.750 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.750 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.750 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.750 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.751 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u50 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.751 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t300 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.751 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.751 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.752 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.752 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.752 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.752 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.752 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: sst at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.753 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.753 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.753 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t500 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.753 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u100m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.754 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.754 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: sp at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.754 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t2m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.754 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.755 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t250 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.755 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q400 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.755 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.755 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.756 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v10m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.756 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.756 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.756 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: tcwv at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.757 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v600 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.757 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u850 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.757 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: v925 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.757 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t700 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.758 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: q100 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.758 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: t200 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.758 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: msl at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.758 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u10m at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.759 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: z150 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]                                                              2026-04-28 22:43:00.759 | DEBUG    | earth2studio.data.arco:fetch_array:301 - Fetching ARCO zarr array for variable: u1000 at 2024-01-01T00:00:00
    Fetching ARCO data:   0%|          | 0/75 [00:00<?, ?it/s]    Fetching ARCO data:   1%|▏         | 1/75 [00:03<04:09,  3.37s/it]    Fetching ARCO data:   4%|▍         | 3/75 [00:04<01:23,  1.17s/it]    Fetching ARCO data:   5%|▌         | 4/75 [00:04<01:01,  1.16it/s]    Fetching ARCO data:  45%|████▌     | 34/75 [00:05<00:03, 12.91it/s]    Fetching ARCO data: 100%|██████████| 75/75 [00:05<00:00, 14.35it/s]
    2026-04-28 22:43:06.220 | SUCCESS  | earth2studio.run:deterministic:109 - Fetched data from ARCO
    2026-04-28 22:43:06.229 | INFO     | earth2studio.run:deterministic:139 - Inference starting!

    Running inference:   0%|          | 0/4 [00:00<?, ?it/s]
                                                            2026-04-28 22:43:06.230 | INFO     | earth2studio.models.px.atlas:_default_generator:496 - Atlas input contains NaNs, replacing with 0.0

    Running inference:   0%|          | 0/4 [00:00<?, ?it/s]
    Running inference:  50%|█████     | 2/4 [04:01<04:01, 120.70s/it]
    Running inference:  75%|███████▌  | 3/4 [08:03<02:51, 171.09s/it]
    Running inference: 100%|██████████| 4/4 [12:04<00:00, 197.40s/it]    Running inference: 100%|██████████| 4/4 [12:04<00:00, 181.16s/it]
    2026-04-28 22:55:10.873 | SUCCESS  | earth2studio.run:deterministic:151 - 
    Inference complete
    /
    ├── lat (721,) float32
    ├── lead_time (4,) timedelta64
    ├── lon (1440,) float32
    ├── tcwv (1, 4, 721, 1440) float32
    ├── time (1,) datetime64
    └── u10m (1, 4, 721, 1440) float32





.. GENERATED FROM PYTHON SOURCE LINES 156-160

Post Processing
---------------
The last step is to post process our results. We will plot the predicted 10m u-wind
component (u10m) and total column water vapour (tcwv) at 12 hours into the forecast.

.. GENERATED FROM PYTHON SOURCE LINES 162-205

.. code-block:: Python

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = "2024-01-01"
    step = 2  # lead time = 12 hrs into the forecast

    plt.close("all")
    projection = ccrs.Robinson()

    fig, ax = plt.subplots(1, 2, subplot_kw={"projection": projection}, figsize=(16, 5))

    # Plot u10m
    im0 = ax[0].pcolormesh(
        io["lon"][:],
        io["lat"][:],
        io["u10m"][0, step],
        transform=ccrs.PlateCarree(),
        cmap="RdBu_r",
        vmin=-20,
        vmax=20,
    )
    ax[0].set_title(f"{forecast} - u10m - Lead time: {6*step}hrs")
    ax[0].coastlines()
    ax[0].gridlines()
    plt.colorbar(im0, ax=ax[0], shrink=0.6, pad=0.04, label="m/s")

    # Plot tcwv
    im1 = ax[1].pcolormesh(
        io["lon"][:],
        io["lat"][:],
        io["tcwv"][0, step],
        transform=ccrs.PlateCarree(),
        cmap="Blues",
        vmin=0,
        vmax=70,
    )
    ax[1].set_title(f"{forecast} - tcwv - Lead time: {6*step}hrs")
    ax[1].coastlines()
    ax[1].gridlines()
    plt.colorbar(im1, ax=ax[1], shrink=0.6, pad=0.04, label="kg/m²")

    plt.tight_layout()
    plt.savefig("outputs/06_atlas_u10m_tcwv.jpg", dpi=300)



.. image-sg:: /examples/02_medium_range/images/sphx_glr_06_atlas_inference_001.png
   :alt: 2024-01-01 - u10m - Lead time: 12hrs, 2024-01-01 - tcwv - Lead time: 12hrs
   :srcset: /examples/02_medium_range/images/sphx_glr_06_atlas_inference_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (21 minutes 47.117 seconds)


.. _sphx_glr_download_examples_02_medium_range_06_atlas_inference.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 06_atlas_inference.ipynb <06_atlas_inference.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 06_atlas_inference.py <06_atlas_inference.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 06_atlas_inference.zip <06_atlas_inference.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
